poem.css
@import url("https://fonts.googleapis.com/css?family=Orbitron");

/* Default styles */

* {
  margin: 0;
  padding: 0;
}

body {
  margin: 0; /* Remove default body margin for better centering */
  font-family: Arial, sans-serif; /* Set a default font family */
  padding-top: 1rem;
  padding-bottom: 1rem;
  background-image: url(images/bg\ 2.jpg);
  background-size: cover;
}

.container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  column-gap: 2.3rem;
  padding: 2rem;
  max-width: 90vw;
}

.main {
  display: flex;
  justify-content: center;
  min-width: 50vw;
  max-width: 50vw;
  width: auto;
  height: 90vh;
  padding: 20px;
  align-items: center;
  background-image: url(images/poem\ bg.jpg);
  background-size: cover;
  background-position: 50%;
  border-radius: 1rem;
  border: solid 0.5rem rgba(163, 62, 246, 0.377);
  overflow: auto;
  margin-right: auto;
  margin-left: 0 ;
  min-width: 20rem;
}

.sidebar {
  text-align: center;
}


#timer {
  font-family: "Orbitron", sans-serif;
  color: rgb(253, 210, 153);
  text-shadow: 6px 6px 6px rgba(93, 21, 22, 0.929);
  text-align: center;
  font-size: 50px;
  margin-bottom: auto;

}

#doneBtn{
  width: 13rem;
  background-image: url(images/poem.jpg) ;
  background-position: 130%;
  border-color: blueviolet;
  font-family: "Times New Roman", Times, serif;
  border-radius: 0.3rem;
  font-size: 1.1rem;
  font-weight: 700;
  color:burlywood;
  text-shadow: 6px 6px 6px rgba(93, 21, 22, 0.929);
  text-align: center;
}

.title-p{
  font-family: "Times New Roman", Times, serif;
  color: rgb(253, 210, 153);
  text-shadow: 6px 6px 6px rgba(93, 21, 22, 0.929);
}

h1 {
  font-size: 70px;
}


p {
  text-shadow: 6px 6px 6px rgba(93, 21, 22, 0.929);
  text-align: center;
}

ul, li {
  padding-left: 0;
  font-size: 1rem;
  color: rgb(253, 210, 153);
  filter: contrast(180%);
  text-shadow:  6px 6px 6px rgba(171, 8, 10, 0.929);
}

.poem ul,
.poem {
  list-style-type: none;
  text-align: center; /* Center poem text */
}

.poem li {
  font-family: "Times New Roman", Times, serif;
  font-style: italic;
  padding-bottom: 0.1em;
  text-align: center; /* Center poem text within each list item */
}

.poem li:first-child::first-letter {
  font-size: 26px;
  font-style: italic;
}

.poem li:not(:first-child) {
  margin-left: 26px;
}

/* Media Queries for different screen sizes */

@media (max-width: 900px) {

  .container, .main, .main-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .container {
   width: auto;
  }
  .main {
    margin-top: 2rem;
    margin-left: auto;
  }

  h1 {
    font-size: 50px;
  }

  .sidebar {
    margin-top: 2rem;
  }

  #timer {
    font-size: 40px;
  }



  }

